iac/k8s/hello-k8s/hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: default
spec:
  type: LoadBalancer   # Change to NodePort if LoadBalancer is unsupported
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
